--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ aiohttp = "^3.4"
 aiohttp_session = "^2.5"
 
 [tool.poetry.dev-dependencies]
-black = "^18.3-alpha.0"
+black = {version = "^18.3-alpha.0", optional = true}
 coverage = "^4.5"
 ipdb = {version = "^0.11.0", optional = true}
 mypy = "^0.620.0"
@@ -20,7 +20,7 @@ pytest-asyncio = "^0.9.0"
 tox = "^3.2"
 
 [tool.poetry.extras]
-development = ["ipdb"]
+development = ["black", "ipdb"]
 
 [tool.black]
 line-length = 80
