--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,6 +1,7 @@
 [settings]
-combine_as_imports=True
-force_grid_wrap=0
+combine_as_imports = true
+force_grid_wrap = 0
 force_sort_within_sections = true
 include_trailing_comma = true
 multi_line_output = 3
+not_skip = __init__.py
