--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aiohttp_session_ws"
-version = "0.1.0"
+version = "1.0.0"
 description = ""
 authors = ["Devin Fee <devin@devinfee.com>"]
 
@@ -10,7 +10,7 @@ aiohttp = "^3.4"
 aiohttp_session = "^2.5"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^18.3-alpha.0", optional = true}
+black = {version = "^18.3-alpha.0", python="^3.6"}
 coverage = "^4.5"
 ipdb = {version = "^0.11.0", optional = true}
 mypy = "^0.620.0"
