--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [tool.poetry]
 name = "aiohttp_session_ws"
 version = "1.1.0"
-description = ""
+
 authors = ["Devin Fee <devin@devinfee.com>"]
+description = ""
+readme = "README.rst"
 
 [tool.poetry.dependencies]
 python = "^3.5"
