--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,24 @@ name = "aiohttp_session_ws"
 version = "1.1.0"
 
 authors = ["Devin Fee <devin@devinfee.com>"]
-description = ""
+description = "session-managed websockets for aiohttp"
 readme = "README.rst"
+
+repository = "https://github.com/dfee/aiohttp_session_ws"
+
+classifiers=[
+    'License :: OSI Approved :: MIT Software License',
+    'Intended Audience :: Developers',
+    'Programming Language :: Python',
+    'Programming Language :: Python :: 3',
+    'Programming Language :: Python :: 3.5',
+    'Programming Language :: Python :: 3.6',
+    'Programming Language :: Python :: 3.7',
+    'Topic :: Internet :: WWW/HTTP',
+    'Framework :: AsyncIO',
+]
+keywords = ["aiohttp", "websocket"]
+
 
 [tool.poetry.dependencies]
 python = "^3.5"
