--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,15 @@ readme = "README.rst"
 repository = "https://github.com/dfee/aiohttp_session_ws"
 
 classifiers=[
-    'License :: OSI Approved :: MIT Software License',
-    'Intended Audience :: Developers',
-    'Programming Language :: Python',
-    'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.5',
-    'Programming Language :: Python :: 3.6',
-    'Programming Language :: Python :: 3.7',
-    'Topic :: Internet :: WWW/HTTP',
-    'Framework :: AsyncIO',
+    "License :: OSI Approved :: MIT License",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.5",
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
+    "Topic :: Internet :: WWW/HTTP",
+    "Framework :: AsyncIO",
 ]
 keywords = ["aiohttp", "websocket"]
 
